Updated to Java 25
Java 17 compatible artifact will be available under the java17 classifier