@@ -42,7 +42,7 @@ public class SDFTextRenderer extends TextRenderer {
     protected void renderTextSegment(final Matrix4f positionMatrix, final MultiDrawBatchDataHolder multiDrawBatchDataHolder, final ShapedTextSegment textSegment, final float x, final float y, final float z) {
         final ShaderBufferBuilder textDataBufferBuilder = multiDrawBatchDataHolder.getShaderStorageBufferBuilder(this.getDrawBatch(), "ssbo_TextData", Std430ShaderBufferBuilder.SUPPLIER).ensureInTopLevelArray();
         final TextStyle textStyle = textSegment.style();
-        final int fontSize = textSegment.glyphs().get(0).fontGlyph().font().getSize();
+        final int fontSize = textSegment.glyphs().getFirst().fontGlyph().font().getSize();
         final int textDataIndex = textDataBufferBuilder.beginStruct(Integer.BYTES).writeInt(fontSize).writeColor(textStyle.color()).writeColor(textStyle.outlineColor()).writeInt(textStyle.flags()).endStructAndGetTopLevelArrayIndex();
         this.renderTextSegment(positionMatrix, multiDrawBatchDataHolder, textSegment, x, y, z, textDataIndex);
     }
